<resources>
    <string name="app_name">GiGMe</string>

    <!-- beverage type popup -->
    <string name="type_of_food_prompt">Food served</string>
    <string-array name="type_of_food_arrays">
        <item>Vegetarian</item>
        <item>Non-vegetarian</item>
        <item>Both</item>
    </string-array>

    <string name="city_prompt">Select City</string>
    <string-array name="city_arrays">
        <item>Arlington</item>
        <item>Dallas</item>
        <item>Fort Worth</item>
        <item>Houston</item>
    </string-array>


    <string name="genre_prompt">Select Genre</string>
    <string-array name="genre_arrays">
        <item>Metal</item>
        <item>Rock</item>
        <item>Pop</item>
        <item>EDM</item>
        <item>Psychedelic</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_re_password">Re-enter password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">The email address is invalid</string>
    <string name="error_invalid_password">The password is too short</string>
    <string name="error_incorrect_password">The password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>
    <string name="view_contact">View Contact</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_events">Events</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="prompt_phone_number">Enter phone number</string>
    <string name="prompt_dob">Enter date of birth</string>
    <string name="title_activity_add_event">AddEventActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_all_events">AllEventsActivity</string>
    <string name="title_add_event">Add an event</string>
    <string name="event_name">Event Name</string>
    <string name="event_address">Event Address</string>
    <string name="event_cover_charge">Ticket Price</string>
    <string name="event_host_phone">Contact Number</string>
    <string name="select_beverage_type">Beverage Served</string>
    <string name="select_city">Select city</string>
    <string name="is_private">Private event(By Invite only)</string>
    <string name="isMinAge">Restricted, 21+ only</string>
    <string name="set_from_date">Event starts on</string>
    <string name="set_from_time">Event starts at</string>
    <string name="set_to_date">Event ends on</string>
    <string name="set_to_time">Event ends at</string>
    <string name="title_activity_view_event_details">ViewEventDetails</string>
    <string name="title_activity_view_on_map">View On Map</string>
    <string name="title_activity_view_on_maps">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="delete_selected_events">Delete selected event</string>
    <string name="delete">Delete</string>
    <string name="title_activity_my_gigs">Your Gigs</string>
    <string name="beverage_type_prompt">Beverage Served</string>
    <string name="create_event">Create event</string>
    <string-array name="beverage_type_arrays">
        <item>Alcoholic</item>
        <item>Non-alcoholic</item>
    </string-array>

    <!-- Strings related to navigation drawer -->
    <string name="mygigs">My GiGs</string>
    <string name="logout">Logout</string>
    <string name="personal">Personal</string>
    <string name="filter">Filter</string>
    <string name="city">City</string>
    <string name="genre">Genre</string>
    <string name="mypref">My preference</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

</resources>
