<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_city"
            android:icon="@drawable/ic_location_city"
            android:title="@string/city" />
        <item
            android:id="@+id/nav_genre"
            android:icon="@drawable/ic_genre2"
            android:title="@string/genre" />

        <item
            android:id="@+id/nav_filter"
            android:icon="@drawable/ic_filter"
            android:title="@string/filter" />
    </group>
    <item android:title="@string/personal">
        <menu>
            <item
                android:id="@+id/nav_mygigs"
                android:icon="@drawable/ic_menu_mygigs"
                android:title="@string/mygigs" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>
