<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.uta.gigme.AddEventActivity"
    tools:showIn="@layout/activity_add_event"
    android:id="@+id/rl_main"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:drawableLeft="@drawable/ic_name"
                android:id="@+id/etEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/event_name" />

            <EditText
                android:drawableLeft="@drawable/ic_address"
                android:id="@+id/etEventAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/etEventName"
                android:hint="@string/event_address" />

            <EditText
                android:drawableLeft="@drawable/ic_contact"
                android:id="@+id/etEventHostPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/etEventAddress"
                android:hint="@string/event_host_phone"
                android:inputType="number"/>

            <EditText
                android:id="@+id/etEventCoverCharge"
                android:drawableLeft="@drawable/ic_ticketprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/etEventHostPhoneNumber"
                android:hint="@string/event_cover_charge"
                android:inputType="number"/>

            <LinearLayout
                android:id="@+id/ll_beverage_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/etEventCoverCharge"
                android:orientation="horizontal">

                <TextView
                    android:drawableLeft="@drawable/ic_bevrage"
                    android:id="@+id/tv_beverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/beverage_type_prompt" />

                <Spinner
                    android:id="@+id/spnr_beverage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tv_beverage"
                    android:layout_marginTop="15dp"
                    android:entries="@array/beverage_type_arrays"
                    android:prompt="@string/beverage_type_prompt" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_type_of_food"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/ll_beverage_type"
                android:orientation="horizontal">

                <TextView
                    android:drawableLeft="@drawable/ic_food"
                    android:id="@+id/tv_type_of_food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/type_of_food_prompt" />

                <Spinner
                    android:id="@+id/spnr_type_of_food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tv_type_of_food"
                    android:layout_marginTop="15dp"
                    android:entries="@array/type_of_food_arrays"
                    android:prompt="@string/type_of_food_prompt" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/ll_type_of_food"
                android:orientation="horizontal">

                <TextView
                    android:drawableLeft="@drawable/ic_city"
                    android:id="@+id/tv_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/city_prompt" />

                <Spinner
                    android:id="@+id/spnr_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/ll_beverage"
                    android:layout_marginTop="15dp"
                    android:entries="@array/city_arrays"
                    android:prompt="@string/city_prompt" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_genre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/ll_city"
                android:orientation="horizontal">

                <TextView
                    android:drawableLeft="@drawable/ic_genre2"
                    android:id="@+id/tv_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/genre_prompt" />

                <Spinner
                    android:id="@+id/spnr_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/ll_city"
                    android:layout_marginTop="15dp"
                    android:entries="@array/genre_arrays"
                    android:prompt="@string/genre_prompt" />
            </LinearLayout>

            <CheckBox
                android:drawableLeft="@drawable/ic_privateevent"
                android:id="@+id/cb_private"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_genre"
                android:layout_marginTop="15dp"
                android:text="@string/is_private" />

            <CheckBox
                android:drawableLeft="@drawable/ic_rstricted"
                android:id="@+id/cb_minAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cb_private"
                android:layout_marginTop="15dp"
                android:text="@string/isMinAge" />

            <LinearLayout
                android:id="@+id/ll_event_from"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/cb_minAge"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                >

                <Button
                    android:drawableLeft="@drawable/ic_start"
                    android:id="@+id/btn_set_from_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_from_date"
                    android:layout_weight="0.5"/>

                <Button
                    android:drawableLeft="@drawable/ic_startsat"
                    android:id="@+id/btn_set_from_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_from_time"
                    android:layout_weight="0.5"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_event_to"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/ll_event_from"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:drawableLeft="@drawable/ic_start"
                    android:id="@+id/btn_set_to_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_to_date"
                    android:layout_weight="0.5" />

                <Button
                    android:drawableLeft="@drawable/ic_endsat"
                    android:id="@+id/btn_set_to_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_to_time"
                    android:layout_weight="0.5" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_create_event"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/ll_event_to"

                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                >
                <Button
                    android:drawableLeft="@drawable/ic_createevent"
                    android:layout_gravity="center"
                    android:id="@+id/btn_create_event"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_event"/>
            </LinearLayout>


        </RelativeLayout>


    </ScrollView>
</RelativeLayout>
